---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(r#\"\n            SELECT *\n            FROM pg_event_trigger\n            ORDER BY oid\n            \"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----+---------+----------+----------+---------+------------+---------+------+
| oid | evtname | evtevent | evtowner | evtfoid | evtenabled | evttags | xmin |
+-----+---------+----------+----------+---------+------------+---------+------+
+-----+---------+----------+----------+---------+------------+---------+------+
